Reorg and more work on pager

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ thiserror = "1"
 lru = "0.4"
 serde = { version = "1", features = ["derive"] }
 bincode = "1"
+zerocopy = "0.3"
+bytes = "0.5"
+
+[dev-dependencies]
+tempfile = "3"
