Upgrade to zerocopy 0.8

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ clru = "0.6"
 shared_arena = "0.8"
 serde = { version = "1", features = ["derive"] }
 bincode = "1"
-zerocopy = "0.7.0-alpha.3"
+zerocopy = { version = "0.8", features = ["derive"] }
 bytes = { version = "1", features = ["serde"] }
 
 [dev-dependencies]
