Vendor cache, switch to allocator_api2 for pages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,12 @@ edition = "2018"
 
 [dependencies]
 thiserror = "2"
-sieve-cache = "0.2"
-shared_arena = "0.8"
+typed-arena = "2"
 serde = { version = "1.0.215", features = ["derive"] }
 bincode = "1"
 zerocopy = { version = "0.8", features = ["derive"] }
 bytes = { version = "1.8", features = ["serde"] }
+allocator-api2 = "0.2.20"
 
 [dev-dependencies]
 tempfile = "3"
