--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 thiserror = "2"
 zerocopy = { version = "0.8", features = ["derive"] }
-bytes = { version = "1.8", features = ["serde"] }
+bytes = { version = "1.8" }
 allocator-api2 = "0.2.20"
 
 [dev-dependencies]
