--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ allocator-api2 = "0.2.20"
 
 [dev-dependencies]
 tempfile = "3"
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
